"Fix spacing"

--- a/Hairitage_Main.css
+++ b/Hairitage_Main.css
@@ -94,9 +94,7 @@
                 grid-area: social;
             }
             
-            footer {
-                overflow: hidden;
-            }
+            footer {}
             /* =======TYPOGRAPHY======== */
             /* ---FAMILY--- */
             
